fix : fixed the CORS error after deployment